[metadata]
name = django-plat-import-lib-api
version = 0.1
description = A app for make data import csv, excel to service connect with elastic search
long_description = ""
url = https://gitlab.com/hd-bpo/plat-import-lib-api-py
author = Giang Son Dat
author_email = datgs@hdwebsoft.com
license = CBPO
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.0
	Framework :: Django :: 2.1
	Framework :: Django :: 2.2
	Framework :: Django :: 3.0
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
install_requires = 
	openpyxl
	pandas
	xlsxwriter
	maya

[egg_info]
tag_build = 
tag_date = 0

